p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: iot-p2-base-image
          imagePullPolicy: Never
          command: ["echo", "'test'", ">", "/var/www/html/index.nginx-debian.html"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - name: app1-port
      protocol: TCP
      port: 80
      targetPort: 80
