p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  # externalIPs:
  #   - 192.168.56.110
  # type: LoadBalancer
  selector:
    app: app2
  ports:
    - name: app2-port
      protocol: TCP
      port: 80
      targetPort: 80
